--- a/NumAndDrive/NumAndDrive.csproj
+++ b/NumAndDrive/NumAndDrive.csproj
@@ -31,6 +31,7 @@
     <None Remove="Views\Account\" />
     <None Remove="Views\User\" />
     <None Remove="Views\Error\" />
+    <None Remove="Views\Driver\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Database\" />
@@ -41,5 +42,6 @@
     <Folder Include="Views\Account\" />
     <Folder Include="Views\User\" />
     <Folder Include="Views\Error\" />
+    <Folder Include="Views\Driver\" />
   </ItemGroup>
 </Project>
